Fix dark mode toggle button alignment

--- a/style.css
+++ b/style.css
@@ -584,7 +584,6 @@ html.lenis {
   .contact-info-upper-container,
   .btn-container {
     flex-wrap: wrap;
-    flex-direction: column;
   }
 
   .contact-info-container {
